--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe width="500" height="500" src="http://localhost:4200/share/59c8f5ad-95ca-494e-a53f-90f2fb04e585?compact=true&gray_background=true&ribbon=true"></iframe>
+<iframe width="600" height="450" src="https://evstaging.canvasgfx.com/share/ad4d09a8-2881-4e38-9869-81e5583ef3a7?compact=true&gray_background=true&ribbon=true"></iframe>
